fix(Footer): Aligns footer items on one row on  > tablet

--- a/web/src/components/Common/Footer/Footer.module.scss
+++ b/web/src/components/Common/Footer/Footer.module.scss
@@ -154,6 +154,10 @@
 }
 
 @include mq($breakpoint-tablet) {
+  .Container {
+    flex-direction: row;
+  }
+
   .Footer {
     padding-top: spacing(12);
   }
